manifests/applications/bakseter-net/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
  name: web
  namespace: bakseter-net
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/bakseter/bakseter.net:latest
          ports:
            - containerPort: 80
