manifests/applications/bakseter-net/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bakseter-net
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web
  type: ClusterIP
